# Directx12RustSample

./: .gitignore  Cargo.toml  Magician.s3d  build.rs
shaders/: shader.hlsl
src/: main.rs
ssun_math/: Cargo.toml
ssun_math/src/: float3.rs  float4.rs  lib.rs  matrix.rs
ssun_renderer/: Cargo.toml
ssun_renderer/src/: lib.rs
ssun_renderer/src/buffers/: buffer.rs  constant_buffer.rs  index_buffer.rs  mod.rs  vertex_buffer.rs
ssun_renderer/src/core/: mod.rs  pipeline_state.rs  renderer.rs  rendering_context.rs  root_signature.rs
ssun_renderer/src/meshs/: dynamic_mesh.rs  mod.rs
ssun_renderer/src/shaders/: mod.rs  shader.rs
ssun_renderer/src/utils/: d3d12_util.rs  mod.rs  window_pix.rs
